tests/health/tests__return_test_force.toit.gold
tests/return_test_force.toit:31:10: error: Condition can't be 'none'
  while (return 499):
         ^~~~~~
tests/return_test_force.toit:35:4: error: Logical operation argument can't be 'none'
  (return 499) or (throw "bad")
   ^~~~~~
tests/return_test_force.toit:35:20: error: Logical operation argument can't be 'none'
  (return 499) or (throw "bad")
                   ^~~~~
tests/return_test_force.toit:38:4: error: Logical operation argument can't be 'none'
  (return 499) and (throw "bad")
   ^~~~~~
tests/return_test_force.toit:38:21: error: Logical operation argument can't be 'none'
  (return 499) and (throw "bad")
                    ^~~~~
